fix(docs): Add .bib extension to bibliography file
The `BIBLIOGRAPHY` keyword in Org mode requires the full filename,
including the `.bib` extension, for the LaTeX exporter to function
correctly. This commit corrects the reference in the example
document.

--- a/example.org
+++ b/example.org
@@ -1,11 +1,9 @@
-* Example Org file with TikZ and bibliography
-
 #+TITLE: Example Document with TikZ and Bibliography
 #+AUTHOR: Your Name
 #+DATE: 2025-11-12
 #+LATEX_HEADER: \usepackage{tikz}
 #+LATEX_HEADER: \usepackage{amsmath}
-#+BIBLIOGRAPHY: refs
+#+BIBLIOGRAPHY: refs.bib
 
 This is a minimal example to test the export workflow.
 
